--- a/Model/BoostModel.ipynb
+++ b/Model/BoostModel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 1,
    "id": "0a97ff45",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
     "from sklearn.model_selection import train_test_split, learning_curve, cross_val_score\n",
     "from sklearn.linear_model import LinearRegression, LogisticRegression, Ridge, Lasso\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import GroupKFold\n",
+    "from sklearn.model_selection import GroupKFold, GroupShuffleSplit\n",
     "from sklearn.metrics import mean_squared_error, accuracy_score, r2_score\n",
     "\n",
     "from tqdm import tqdm\n",
@@ -37,18 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
-   "id": "5943048e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "landsat_train_data = '../Datasets/landsat_features_more_bands_train.csv'\n",
-    "landsat_validation_data = '../Datasets/landsat_features_more_bands_validation.csv'\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 2,
    "id": "4540943c",
    "metadata": {},
    "outputs": [],
@@ -72,385 +61,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e7c2ef79",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>nir</th>\n",
-       "      <th>green</th>\n",
-       "      <th>swir16</th>\n",
-       "      <th>swir22</th>\n",
-       "      <th>coastal</th>\n",
-       "      <th>blue</th>\n",
-       "      <th>red</th>\n",
-       "      <th>lwir11</th>\n",
-       "      <th>NDMI</th>\n",
-       "      <th>MNDWI</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Chemical_Solubility</th>\n",
-       "      <th>rain_7d_nasa</th>\n",
-       "      <th>rain_3d_nasa</th>\n",
-       "      <th>rain_12d_nasa</th>\n",
-       "      <th>pct_agri</th>\n",
-       "      <th>pct_natural</th>\n",
-       "      <th>elevation</th>\n",
-       "      <th>slope</th>\n",
-       "      <th>month_sin</th>\n",
-       "      <th>year_sin</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5326</th>\n",
-       "      <td>10358.0</td>\n",
-       "      <td>8253.0</td>\n",
-       "      <td>9190.0</td>\n",
-       "      <td>8283.0</td>\n",
-       "      <td>7316.0</td>\n",
-       "      <td>7550.0</td>\n",
-       "      <td>8090.5</td>\n",
-       "      <td>44498.5</td>\n",
-       "      <td>0.059750</td>\n",
-       "      <td>-0.053718</td>\n",
-       "      <td>...</td>\n",
-       "      <td>18.925000</td>\n",
-       "      <td>27.19</td>\n",
-       "      <td>11.02</td>\n",
-       "      <td>64.19</td>\n",
-       "      <td>33.781362</td>\n",
-       "      <td>64.153439</td>\n",
-       "      <td>1354.0</td>\n",
-       "      <td>5.550718</td>\n",
-       "      <td>8.660254e-01</td>\n",
-       "      <td>-0.587785</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3105</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>27.215000</td>\n",
-       "      <td>0.42</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.91</td>\n",
-       "      <td>19.211896</td>\n",
-       "      <td>58.117853</td>\n",
-       "      <td>983.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>-5.000000e-01</td>\n",
-       "      <td>0.951057</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7959</th>\n",
-       "      <td>17447.5</td>\n",
-       "      <td>10032.5</td>\n",
-       "      <td>15793.5</td>\n",
-       "      <td>12627.5</td>\n",
-       "      <td>8554.0</td>\n",
-       "      <td>8874.0</td>\n",
-       "      <td>10356.5</td>\n",
-       "      <td>43488.0</td>\n",
-       "      <td>0.049758</td>\n",
-       "      <td>-0.223070</td>\n",
-       "      <td>...</td>\n",
-       "      <td>24.770000</td>\n",
-       "      <td>14.02</td>\n",
-       "      <td>13.55</td>\n",
-       "      <td>23.49</td>\n",
-       "      <td>41.045096</td>\n",
-       "      <td>55.201903</td>\n",
-       "      <td>137.0</td>\n",
-       "      <td>3.438912</td>\n",
-       "      <td>-8.660254e-01</td>\n",
-       "      <td>0.587785</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7767</th>\n",
-       "      <td>16670.5</td>\n",
-       "      <td>9914.0</td>\n",
-       "      <td>14452.5</td>\n",
-       "      <td>11829.0</td>\n",
-       "      <td>8140.0</td>\n",
-       "      <td>8658.0</td>\n",
-       "      <td>10080.5</td>\n",
-       "      <td>45864.0</td>\n",
-       "      <td>0.071266</td>\n",
-       "      <td>-0.186260</td>\n",
-       "      <td>...</td>\n",
-       "      <td>27.640000</td>\n",
-       "      <td>1.75</td>\n",
-       "      <td>0.20</td>\n",
-       "      <td>7.42</td>\n",
-       "      <td>0.331288</td>\n",
-       "      <td>90.766421</td>\n",
-       "      <td>280.0</td>\n",
-       "      <td>1.350224</td>\n",
-       "      <td>8.660254e-01</td>\n",
-       "      <td>-0.951057</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>547</th>\n",
-       "      <td>12887.0</td>\n",
-       "      <td>10271.5</td>\n",
-       "      <td>12497.5</td>\n",
-       "      <td>10760.5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9411.5</td>\n",
-       "      <td>10763.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.015344</td>\n",
-       "      <td>-0.097765</td>\n",
-       "      <td>...</td>\n",
-       "      <td>23.800000</td>\n",
-       "      <td>0.60</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>1.09</td>\n",
-       "      <td>15.183905</td>\n",
-       "      <td>57.100188</td>\n",
-       "      <td>534.0</td>\n",
-       "      <td>6.017285</td>\n",
-       "      <td>5.000000e-01</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>241</th>\n",
-       "      <td>29764.0</td>\n",
-       "      <td>65535.0</td>\n",
-       "      <td>46934.0</td>\n",
-       "      <td>26873.5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>65535.0</td>\n",
-       "      <td>65535.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-0.223865</td>\n",
-       "      <td>0.165388</td>\n",
-       "      <td>...</td>\n",
-       "      <td>27.129997</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>1.77</td>\n",
-       "      <td>0.335535</td>\n",
-       "      <td>70.632207</td>\n",
-       "      <td>422.0</td>\n",
-       "      <td>0.954841</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2278</th>\n",
-       "      <td>12868.5</td>\n",
-       "      <td>9539.0</td>\n",
-       "      <td>14458.0</td>\n",
-       "      <td>11762.5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8814.0</td>\n",
-       "      <td>10139.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-0.058167</td>\n",
-       "      <td>-0.204984</td>\n",
-       "      <td>...</td>\n",
-       "      <td>22.605000</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>9.525943</td>\n",
-       "      <td>78.144735</td>\n",
-       "      <td>1251.0</td>\n",
-       "      <td>2.134300</td>\n",
-       "      <td>1.224647e-16</td>\n",
-       "      <td>0.951057</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9037</th>\n",
-       "      <td>12439.5</td>\n",
-       "      <td>9740.0</td>\n",
-       "      <td>15344.0</td>\n",
-       "      <td>14068.5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9018.0</td>\n",
-       "      <td>10324.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-0.104540</td>\n",
-       "      <td>-0.223409</td>\n",
-       "      <td>...</td>\n",
-       "      <td>23.724998</td>\n",
-       "      <td>12.49</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>13.47</td>\n",
-       "      <td>41.495891</td>\n",
-       "      <td>57.240545</td>\n",
-       "      <td>1210.0</td>\n",
-       "      <td>3.016961</td>\n",
-       "      <td>-8.660254e-01</td>\n",
-       "      <td>-0.951057</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8402</th>\n",
-       "      <td>14549.5</td>\n",
-       "      <td>9855.0</td>\n",
-       "      <td>12703.0</td>\n",
-       "      <td>10650.5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9045.5</td>\n",
-       "      <td>10271.5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.067755</td>\n",
-       "      <td>-0.126252</td>\n",
-       "      <td>...</td>\n",
-       "      <td>23.935000</td>\n",
-       "      <td>1.48</td>\n",
-       "      <td>0.31</td>\n",
-       "      <td>3.50</td>\n",
-       "      <td>15.058030</td>\n",
-       "      <td>23.939665</td>\n",
-       "      <td>97.0</td>\n",
-       "      <td>2.134300</td>\n",
-       "      <td>8.660254e-01</td>\n",
-       "      <td>-0.951057</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1695</th>\n",
-       "      <td>20432.5</td>\n",
-       "      <td>11522.5</td>\n",
-       "      <td>15319.0</td>\n",
-       "      <td>11948.5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10660.0</td>\n",
-       "      <td>10852.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.143029</td>\n",
-       "      <td>-0.141441</td>\n",
-       "      <td>...</td>\n",
-       "      <td>19.904999</td>\n",
-       "      <td>26.17</td>\n",
-       "      <td>1.90</td>\n",
-       "      <td>32.42</td>\n",
-       "      <td>43.965682</td>\n",
-       "      <td>55.248572</td>\n",
-       "      <td>1519.0</td>\n",
-       "      <td>2.698951</td>\n",
-       "      <td>5.000000e-01</td>\n",
-       "      <td>0.951057</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>7921 rows × 30 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          nir    green   swir16   swir22  coastal     blue      red   lwir11  \\\n",
-       "5326  10358.0   8253.0   9190.0   8283.0   7316.0   7550.0   8090.5  44498.5   \n",
-       "3105      NaN      NaN      NaN      NaN      NaN      NaN      NaN      NaN   \n",
-       "7959  17447.5  10032.5  15793.5  12627.5   8554.0   8874.0  10356.5  43488.0   \n",
-       "7767  16670.5   9914.0  14452.5  11829.0   8140.0   8658.0  10080.5  45864.0   \n",
-       "547   12887.0  10271.5  12497.5  10760.5      NaN   9411.5  10763.0      NaN   \n",
-       "...       ...      ...      ...      ...      ...      ...      ...      ...   \n",
-       "241   29764.0  65535.0  46934.0  26873.5      NaN  65535.0  65535.0      NaN   \n",
-       "2278  12868.5   9539.0  14458.0  11762.5      NaN   8814.0  10139.0      NaN   \n",
-       "9037  12439.5   9740.0  15344.0  14068.5      NaN   9018.0  10324.0      NaN   \n",
-       "8402  14549.5   9855.0  12703.0  10650.5      NaN   9045.5  10271.5      NaN   \n",
-       "1695  20432.5  11522.5  15319.0  11948.5      NaN  10660.0  10852.0      NaN   \n",
-       "\n",
-       "          NDMI     MNDWI  ...  Chemical_Solubility  rain_7d_nasa  \\\n",
-       "5326  0.059750 -0.053718  ...            18.925000         27.19   \n",
-       "3105       NaN       NaN  ...            27.215000          0.42   \n",
-       "7959  0.049758 -0.223070  ...            24.770000         14.02   \n",
-       "7767  0.071266 -0.186260  ...            27.640000          1.75   \n",
-       "547   0.015344 -0.097765  ...            23.800000          0.60   \n",
-       "...        ...       ...  ...                  ...           ...   \n",
-       "241  -0.223865  0.165388  ...            27.129997          0.08   \n",
-       "2278 -0.058167 -0.204984  ...            22.605000          0.00   \n",
-       "9037 -0.104540 -0.223409  ...            23.724998         12.49   \n",
-       "8402  0.067755 -0.126252  ...            23.935000          1.48   \n",
-       "1695  0.143029 -0.141441  ...            19.904999         26.17   \n",
-       "\n",
-       "      rain_3d_nasa  rain_12d_nasa   pct_agri  pct_natural  elevation  \\\n",
-       "5326         11.02          64.19  33.781362    64.153439     1354.0   \n",
-       "3105          0.00           0.91  19.211896    58.117853      983.0   \n",
-       "7959         13.55          23.49  41.045096    55.201903      137.0   \n",
-       "7767          0.20           7.42   0.331288    90.766421      280.0   \n",
-       "547           0.08           1.09  15.183905    57.100188      534.0   \n",
-       "...            ...            ...        ...          ...        ...   \n",
-       "241           0.05           1.77   0.335535    70.632207      422.0   \n",
-       "2278          0.00           0.00   9.525943    78.144735     1251.0   \n",
-       "9037          0.08          13.47  41.495891    57.240545     1210.0   \n",
-       "8402          0.31           3.50  15.058030    23.939665       97.0   \n",
-       "1695          1.90          32.42  43.965682    55.248572     1519.0   \n",
-       "\n",
-       "         slope     month_sin  year_sin  \n",
-       "5326  5.550718  8.660254e-01 -0.587785  \n",
-       "3105  0.000000 -5.000000e-01  0.951057  \n",
-       "7959  3.438912 -8.660254e-01  0.587785  \n",
-       "7767  1.350224  8.660254e-01 -0.951057  \n",
-       "547   6.017285  5.000000e-01  0.000000  \n",
-       "...        ...           ...       ...  \n",
-       "241   0.954841  1.000000e+00  0.000000  \n",
-       "2278  2.134300  1.224647e-16  0.951057  \n",
-       "9037  3.016961 -8.660254e-01 -0.951057  \n",
-       "8402  2.134300  8.660254e-01 -0.951057  \n",
-       "1695  2.698951  5.000000e-01  0.951057  \n",
-       "\n",
-       "[7921 rows x 30 columns]"
-      ]
-     },
-     "execution_count": 131,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "Feature_data, Target_data = dataHandler.get_training_dataset()\n",
@@ -460,13 +74,29 @@
     "electrical_target = Target_data['Electrical Conductance']\n",
     "phosphorus_target = Target_data['Dissolved Reactive Phosphorus']\n",
     "\n",
+    "full_dataset = dataHandler.get_full_training_dataset()\n",
+    "\n",
+    "groups = full_dataset[[\"Latitude\", \"Longitude\"]].astype(str).agg('|'.join, axis=1).values \n",
+    "gss = GroupShuffleSplit(n_splits=1, test_size=0.2, random_state=42)\n",
+    "\n",
+    "alkalinity_train_idx, alkalinity_test_idx = next(gss.split(Feature_data, alkalinity_target, groups=groups)) \n",
+    "electrical_train_idx, electrical_test_idx = next(gss.split(Feature_data, electrical_target, groups=groups)) \n",
+    "phosphorous_train_idx, phosphorous_test_idx = next(gss.split(Feature_data, phosphorus_target, groups=groups))\n",
+    "\n",
+    "X_train_alkalinity, X_test_alkalinity = Feature_data.iloc[alkalinity_train_idx], Feature_data.iloc[alkalinity_test_idx]\n",
+    "Y_train_alkalinity, y_test_alkalinity = alkalinity_target.iloc[alkalinity_train_idx], alkalinity_target.iloc[alkalinity_test_idx]\n",
+    "\n",
+    "X_train_electrical, X_test_electrical = Feature_data.iloc[electrical_train_idx], Feature_data.iloc[electrical_test_idx]\n",
+    "Y_train_electrical, y_test_electrical = electrical_target.iloc[electrical_train_idx], electrical_target.iloc[electrical_test_idx]\n",
+    "\n",
+    "X_train_phosphorus, X_test_phosphorus = Feature_data.iloc[phosphorous_train_idx], Feature_data.iloc[phosphorous_test_idx]\n",
+    "Y_train_phosphorus, y_test_phosphorus = phosphorus_target.iloc[phosphorous_train_idx], phosphorus_target.iloc[phosphorous_test_idx]\n",
     "\n",
     "\n",
-    "X_train_alkalinity, X_test_alkalinity, y_train_alkalinity, y_test_alkalinity = train_test_split(Feature_data, alkalinity_target, test_size=0.15)\n",
-    "X_train_electrical, X_test_electrical, y_train_electrical, y_test_electrical = train_test_split(Feature_data, electrical_target, test_size=0.15)\n",
-    "X_train_phosphorus, X_test_phosphorus, y_train_phosphorus, y_test_phosphorus = train_test_split(Feature_data, phosphorus_target, test_size=0.15)\n",
-    "\n",
-    "X_train_alkalinity\n"
+    "subset = full_dataset.iloc[alkalinity_train_idx][[\"Latitude\", \"Longitude\"]]\n",
+    "subset.to_csv('../Images/group_local_train.csv')\n",
+    "subset = full_dataset.iloc[alkalinity_test_idx][[\"Latitude\", \"Longitude\"]]\n",
+    "subset.to_csv('../Images/group_local_test.csv')"
    ]
   },
   {
@@ -2150,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": null,
    "id": "17502bff",
    "metadata": {},
    "outputs": [
@@ -2173,6 +1803,17 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
