rounded statical data

--- a/Model/DataManipulation.ipynb
+++ b/Model/DataManipulation.ipynb
@@ -52,6 +52,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f4acf929",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18\n",
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(terrain_features['slope'].round(0).unique()))\n",
+    "print(len(terrain_features['curvature'].round(3).unique()))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9da66c16",
    "metadata": {},
@@ -61,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "d9e1233f",
    "metadata": {},
    "outputs": [
@@ -89,6 +109,37 @@
     "    soil_use[percentage] = soil_use[percentage].round(0)\n",
     "\n",
     "soil_use.to_csv(\"../Datasets/soil_use_data_rounded_training.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1d166ef4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pct_agri\n",
+      "47\n",
+      "pct_urban\n",
+      "27\n",
+      "pct_natural\n",
+      "59\n",
+      "pct_water\n",
+      "15\n",
+      "pct_wetlands\n",
+      "4\n",
+      "pct_others\n",
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "for percentage in percentages:\n",
+    "    print(percentage)\n",
+    "    print(len(soil_use[percentage].round(0).unique()))"
    ]
   }
  ],
